@@ -1,6 +1,7 @@
 * V1.9.5.1
   * fixed minor bug in "ck rm" when deleting entries only from allowed repos (for crowdsourcing)
   * fixed problem with wrong repo UID when repo is installed from zip archive
+  * added flag --all to "ck zip" to archive all files including .git
 
 * V1.9.5
   * added "debug":"yes" to kernel for GitHub versions
